--- a/tutorials/configs/padlock_probe_designer_ensembl.yaml
+++ b/tutorials/configs/padlock_probe_designer_ensembl.yaml
@@ -14,7 +14,7 @@ annotation_release: current # release number of annotation or 'current' to use m
 
 
 ### Parameters for oligo sequences generation
-file_genes: ./data/genes/ncbi_10.txt # file with a list the genes used to generate the oligos sequences, set as None if al the genes are used
+file_genes: ./data/genes/ensemble_10.txt # file with a list the genes used to generate the oligos sequences, set as None if al the genes are used
 oligo_length_min: 38 #min length of oligos
 oligo_length_max: 45 #max length of oligos
 block_size: 50
@@ -62,7 +62,7 @@ detect_oligo_length_max: 25 # max length of detection oligo
 detect_oligo_Tm_opt: 32 # optimal melting temperature of detection oligo
 
 
-### Parameters for Melting Temperature 
+### Parameters for Melting Temperature
 # The melting temperature is used in 2 different stages (property filters and padlock detection oligo design), where a few parameters are shared and the others differ.
 # parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
 Tm_parameters:
