--- a/tutorials/configs/padlock_probe_designer_ensembl.yaml
+++ b/tutorials/configs/padlock_probe_designer_ensembl.yaml
@@ -1,7 +1,6 @@
 ### General parameters
 n_jobs: 2 # number of cores used to run the pipeline
 dir_output: output # name of the directory where the output files will be written
-file_format: tsv # fromat of the written files, can be "tsv" or "gtf"
 min_oligos_per_gene: 0 # minimum number of oligos that a gene must have before it gets deleted
 write_removed_genes: True # write in a file the removed genes
 write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
@@ -9,8 +8,8 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 ### Parameters for genome and gene annotation
 source: ensembl # define annotation source
-species: human # currently supported species: human or mouse
-annotation_release: current # release number of annotation or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
+species: Homo_sapiens # species name in ensemble download format, e.g. 'homo_sapiens' for human; see http://ftp.ensembl.org/pub/release-108/gtf/ for available species names
+annotation_release: current # release number of annotation, e.g. 'release-108' or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
 
 
 ### Parameters for oligo sequences generation
