--- a/tutorials/configs/padlock_probe_designer_ncbi.yaml
+++ b/tutorials/configs/padlock_probe_designer_ncbi.yaml
@@ -9,8 +9,9 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 ### Parameters for genome and gene annotation
 source: ncbi # define annotation source
-species: human # currently supported species: human or mouse
-annotation_release: current # release number (e.g. 109 or 109.20211119 for ncbi) of annotation or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
+taxon: vertebrate_mammalian # taxon of the species, valid taxa are: archaea, bacteria, fungi, invertebrate, mitochondrion, plant, plasmid, plastid, protozoa, vertebrate_mammalian, vertebrate_other, viral
+species: Homo_sapiens # species name in NCBI download format, e.g. 'Homo_sapiens' for human; see https://ftp.ncbi.nlm.nih.gov/genomes/refseq/ for available species name
+annotation_release: current # release number of annotation e.g. '109' or '109.20211119'  or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
 
 
 ### Parameters for oligo sequences generation
