--- a/tutorials/configs/padlock_probe_designer_ensembl.yaml
+++ b/tutorials/configs/padlock_probe_designer_ensembl.yaml
@@ -6,10 +6,10 @@ write_removed_genes: True # write in a file the removed genes
 write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
 
 
-### Parameters for genome and gene annotation
-source: ensembl # define annotation source
-species: homo_sapiens # species name in ensemble download format, e.g. 'homo_sapiens' for human; see http://ftp.ensembl.org/pub/release-108/gtf/ for available species names
-annotation_release: current # release number of annotation, e.g. 'release-108' or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
+### Parameters for genomic region generator that creates fasta file
+source: ensembl # required: indicate that ensembl annotation should be used
+species: homo_sapiens # required: species name in ensemble download format, e.g. 'homo_sapiens' for human; see http://ftp.ensembl.org/pub/release-108/gtf/ for available species names
+annotation_release: current # required: release number of annotation, e.g. 'release-108' or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
 
 
 ### Parameters for oligo sequences generation
