--- a/tutorials/configs/probe_design_SPOT_ncbi.yaml
+++ b/tutorials/configs/probe_design_SPOT_ncbi.yaml
@@ -11,13 +11,15 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 ### Parameters for genome and gene annotation
 source: ncbi # define annotation source
-species: human # currently supported species: human or mouse
-annotation_release: current # release number (e.g. 109 or 109.20211119 for ncbi) of annotation or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
+taxon: vertebrate_mammalian # required: taxon of the species, valid taxa are: archaea, bacteria, fungi, invertebrate, mitochondrion, plant, plasmid, plastid, protozoa, vertebrate_mammalian, vertebrate_other, viral
+species: Homo_sapiens # required: species name in NCBI download format, e.g. 'Homo_sapiens' for human; see https://ftp.ncbi.nlm.nih.gov/genomes/refseq/ for available species name
+annotation_release: current # required: release number of annotation e.g. '109' or '109.20211119'  or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
+
 
 
 ### Parameters for oligo sequences generation
 # ADD OUR INFO
-file_genes: ./SPOT/data/genes_ncbi_SPOT_2.txt # file with a list the genes used to generate the oligos sequences, set as None if al the genes are used
+file_genes: ./data/genes_ncbi_SPOT_2.txt # file with a list the genes used to generate the oligos sequences, set as None if al the genes are used
 oligo_length_min: 26 #min length of oligos
 oligo_length_max: 30 #max length of oligos
 block_size: 50
