--- a/tutorials/configs/padlock_probe_designer_ensembl.yaml
+++ b/tutorials/configs/padlock_probe_designer_ensembl.yaml
@@ -8,16 +8,15 @@ write_intermediate_steps: True # writes the oligo sequences after each step of t
 
 ### Parameters for genomic region generator that creates fasta file
 source: ensembl # required: indicate that ensembl annotation should be used
-species: homo_sapiens # required: species name in ensemble download format, e.g. 'homo_sapiens' for human; see http://ftp.ensembl.org/pub/release-108/gtf/ for available species names
-annotation_release: current # required: release number of annotation, e.g. 'release-108' or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
+source_params:
+    species: homo_sapiens # required: species name in ensemble download format, e.g. 'homo_sapiens' for human; see http://ftp.ensembl.org/pub/release-108/gtf/ for available species names
+    annotation_release: current # required: release number of annotation, e.g. 'release-108' or 'current' to use most recent annotation release. Check out release numbers for ensemble at ftp.ensembl.org/pub/
 
 
 ### Parameters for oligo sequences generation
 file_genes: ./data/genes/ensemble_10.txt # file with a list the genes used to generate the oligos sequences, leave empty  if all the genes are used
 oligo_length_min: 38 # minimum length of oligos
 oligo_length_max: 45 # maximum length of oligos
-block_size: 50 # size of the exon junctions in the transcript used for the alignement methods
-
 
 ### Parameters for the property filers
 # oligo sequence
@@ -37,7 +36,6 @@ arm_Tm_max: 49 # maximum melting temperature of each arm
 word_size: 10 # word size for the blastn seed (exact match to target)
 coverage: 50 # minimum coverage between oligos and target sequence, ranging from 0 to 100% (full coverage)
 percent_identity: 80 # maximum similarity between oligos and target sequences, ranging from 0 to 100% (no missmatch)
-strand: plus # strand of the query sequence to search
 # Bowtie Ligation Region filter
 ligation_region_size: 5 # size of the seed region around the ligation site for bowtie seed region filter
 
@@ -65,40 +63,56 @@ detect_oligo_Tm_opt: 32 # optimal melting temperature of detection oligo
 ### Parameters for Melting Temperature
 # The melting temperature is used in 2 different stages (property filters and padlock detection oligo design), where a few parameters are shared and the others differ.
 # parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
-Tm_parameters:
-    shared:
-        check: True
-        strict: True
-        c_seq: null
-        shift: 0
-        nn_table: DNA_NN3
-        tmm_table: DNA_TMM1
-        imm_table: DNA_IMM1
-        de_table: DNA_DE1
-        dnac1: 50 #[nM]
-        dnac2: 0
-        selfcomp: False
-        dNTPs: 0
-        saltcorr: 7
-    property_filter:
-        Na: 1.25 #[mM]
-        K: 75 #[mM]
-        Tris: 20 #[mM]
-        Mg: 10 #[mM]
-    detection_oligo:
-        Na: 39 #[mM]
-        K: 0 #[mM]
-        Tris: 0 #[mM]
-        Mg: 0 #[mM]
+Tm_parameters_target_oligo:
+    check: True
+    strict: True
+    c_seq: null
+    shift: 0
+    nn_table: DNA_NN3
+    tmm_table: DNA_TMM1
+    imm_table: DNA_IMM1
+    de_table: DNA_DE1
+    dnac1: 50 #[nM]
+    dnac2: 0
+    selfcomp: False
+    dNTPs: 0
+    saltcorr: 7
+    Na: 1.25 #[mM]
+    K: 75 #[mM]
+    Tris: 20 #[mM]
+    Mg: 10 #[mM]
 
-Tm_correction_parameters:
-    shared:
-        DMSO: 0
-        DMSOfactor: 0.75
-        fmdfactor: 0.65
-        fmdmethod: 1
-        GC: null
-    property_filter:
-        fmd: 20
-    detection_oligo:
-        fmd: 30
+Tm_chem_correction_param_target_oligo:
+    DMSO: 0
+    DMSOfactor: 0.75
+    fmdfactor: 0.65
+    fmdmethod: 1
+    GC: null
+    fmd: 20
+
+Tm_parameters_detection_oligo:
+    check: True
+    strict: True
+    c_seq: null
+    shift: 0
+    nn_table: DNA_NN3
+    tmm_table: DNA_TMM1
+    imm_table: DNA_IMM1
+    de_table: DNA_DE1
+    dnac1: 50 #[nM]
+    dnac2: 0
+    selfcomp: False
+    dNTPs: 0
+    saltcorr: 7
+    Na: 39 #[mM]
+    K: 0 #[mM]
+    Tris: 0 #[mM]
+    Mg: 0 #[mM]
+
+Tm_chem_correction_param_detection_oligo:
+    DMSO: 0
+    DMSOfactor: 0.75
+    fmdfactor: 0.65
+    fmdmethod: 1
+    GC: null
+    fmd: 30
