--- a/data/configs/seqfish_plus_probe_designer_ncbi.yaml
+++ b/data/configs/seqfish_plus_probe_designer_ncbi.yaml
@@ -15,6 +15,7 @@ source_params:
     taxon: vertebrate_mammalian # required: taxon of the species, valid taxa are: archaea, bacteria, fungi, invertebrate, mitochondrion, plant, plasmid, plastid, protozoa, vertebrate_mammalian, vertebrate_other, viral
     species: Homo_sapiens # required: species name in NCBI download format, e.g. 'Homo_sapiens' for human; see https://ftp.ncbi.nlm.nih.gov/genomes/refseq/ for available species name
     annotation_release: 110 # required: release number of annotation e.g. '109' or '109.20211119'  or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
+region: cds
 # source_params:
 #     file_annotation: output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.gtf # required: GTF file with gene annotation
 #     file_sequence: output_seqfish/annotation /GCF_000001405.40_GRCh38.p14_genomic.fna # required: FASTA file with genome sequence
