--- a/data/configs/oligo_seq_custom.yaml
+++ b/data/configs/oligo_seq_custom.yaml
@@ -1,35 +1,38 @@
+#######################
+### USER PARAMETERS ###
+#######################
+
 ### General parameters
-n_jobs: 1 # number of cores used to run the pipeline
+n_jobs: 2 # number of cores used to run the pipeline
 dir_output: oligo_seq_output # name of the directory where the output files will be written
 file_format: tsv # fromat of the written files, can be "tsv" or "gtf"
-min_oligos_per_gene: 24 # minimum number of oligos that a gene must have before it gets deleted
-write_removed_genes: True # write in a file the removed genes
-write_intermediate_steps: True # writes the oligo sequences after each step of the pipeline
-
+min_oligos_per_gene: 5 # minimum number of oligos that a gene must have before it gets deleted
+write_removed_genes: true # write in a file the removed genes
+write_intermediate_steps: true # writes the oligo sequences after each step of the pipeline
 
 ### Parameters for genome and gene annotation
-#source: ncbi # define annotation source
-#species: human # currently supported species: human or mouse
-#annotation_release: current # release number (e.g. 109 or 109.20211119 for ncbi) of annotation or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
-
-
 source: custom # required: indicate that own annotation should be used
 source_params:
-    file_annotation: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf #output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.gtf # required: GTF file with gene annotation
-    file_sequence: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna #output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.fna # required: FASTA file with genome sequence
-    files_source: NCBI # optional: original source of the genomic files
-    species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
-    annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
-    genome_assembly: GRCh38  # optional: genome assembly of provided annotation, leave empty if unknown
-genomic_regions: # list of genomic region the user wants to use to generate the oligos, the vaialble options are: "gene", "intergenic", "exon", "intron", "cds", "utr", "exon_exon_junction"
-  - exon
-  - exon_exon_junction
+  file_annotation: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf #output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.gtf # required: GTF file with gene annotation
+  file_sequence: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna #output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.fna # required: FASTA file with genome sequence
+  files_source: NCBI # optional: original source of the genomic files
+  species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
+  annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
+  genome_assembly: GRCh38 # optional: genome assembly of provided annotation, leave empty if unknown
 
 ### Parameters for oligo sequences generation
 file_regions: data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
 oligo_length_min: 26 #min length of oligos
 oligo_length_max: 30 #max length of oligos
-
+genomic_regions:
+  # list of genomic region the user wants to use to generate the oligos, set to True the ones you want to use
+  gene: false
+  intergenic: false
+  exon: true
+  intron: false
+  cds: false
+  utr: false
+  exon_exon_junction: true
 
 ### Parameters for the property filers
 # oligo sequence
@@ -39,18 +42,41 @@ Tm_min: 50 # minimum melting temperature of oligos
 Tm_max: 70 # maximum melting temperature of oligos
 secondary_structures_T: 37 # temperature to compute the secondary structure free energy
 secondary_structures_threshold_deltaG: 0.1 # threshold for the secondary structure free energy
-homopolymeric_base_n: # minimum homopolymeric base length for each nucletide
+homopolymeric_base_n:
+  # minimum homopolymeric base length for each nucletide
   A: 5
   T: 6
   C: 7
-prohibited_sequence: # list od subsequences the used does not wnat in the oligos
+homodimer_max_len_selfcomp: 10 #The maximum length of self-complementary sequence allowed to avoid homodimer formation.
+prohibited_sequence:
+  # list od subsequences the used does not wnat in the oligos
   - AAACGTCG
   - CCGAGTC
 
 ### Parameters for the specificity filters
 specificity_genomic_regions:
-  - exon
-  - exon_exon_junctions
+  # list of genomic region the user wants to use to generate the oligos, set to True the ones you want to use
+  gene: false
+  intergenic: false
+  exon: true
+  intron: false
+  cds: false
+  utr: false
+  exon_exon_junction: true
+hybridization_probability_threshold: 0.0001
+
+### Parameters for the Oligo set selection
+GC_content_opt: 55 # max and min values are defiend above
+Tm_opt: 60 # max and min values are defiend above
+opt_oligoset_size: 4
+min_oligoset_size: 3
+n_sets: 100
+
+############################
+### DEVELOPER PARAMETERS ###
+############################
+
+### Parameters for the specificity filters
 cross_hybridization_balstn_search_parameters:
   perc_identity: 80
   strand: minus # this parameter is fixed
@@ -59,27 +85,20 @@ cross_hybridization_balstn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
 hybridization_probability_balstn_search_parameters:
   perc_identity: 80
-  strand: plus 
+  strand: plus
   word_size: 10
 hybridization_probability_balstn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
-hybridization_probability_threshold: 0.0001
-
 
 ### Parameters for the Oligo set selection
-GC_content_opt: 55 # max and min values are defiend above
-Tm_opt: 60 # max and min values are defiend above
-oligoset_size: 4
-min_oligoset_size: 3
 max_graph_size: 5000
-n_sets: 100
 
 ### Parameters for Melting Temperature 
 # The melting temperature is used in 2 different stages (property filters and padlock detection oligo design), where a few parameters are shared and the others differ.
 # parameters for melting temperature -> for more information on parameters, see: https://biopython.org/docs/1.75/api/Bio.SeqUtils.MeltingTemp.html#Bio.SeqUtils.MeltingTemp.Tm_NN
 Tm_parameters:
-  check: True
-  strict: True
+  check: true
+  strict: true
   c_seq: null
   shift: 0
   nn_table: DNA_NN3
@@ -88,7 +107,7 @@ Tm_parameters:
   de_table: DNA_DE1
   dnac1: 50 #[nM]   
   dnac2: 0
-  selfcomp: False
+  selfcomp: false
   dNTPs: 0
   saltcorr: 7
   Na: 1000 #[mM] #1M from probeArray paper
