--- a/data/configs/oligo_seq_designer.yaml
+++ b/data/configs/oligo_seq_designer.yaml
@@ -12,8 +12,9 @@ write_intermediate_steps: true # writes the oligo sequences after each step of t
 
 ### Parameters for oligo sequences generation
 file_regions: data/genes/custom_10.txt # file with a list the genes used to generate the oligos sequences, leave empty if all the genes are used
-files_fasta_oligo_database:
-  - data/annotations/... # fasta file with sequences form which the oligos should be generated. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+files_fasta_oligo_database: # fasta file with sequences form which the oligos should be generated. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+  - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+  - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
 oligo_length_min: 26 #min length of oligos
 oligo_length_max: 30 #max length of oligos
 
@@ -33,8 +34,11 @@ homopolymeric_base_n:
 homodimer_max_len_selfcomp: 10 #The maximum length of self-complementary sequence allowed to avoid homodimer formation.
 
 ### Parameters for the specificity filters
-files_fasta_reference_database:
-  - data/annotations/... # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+files_fasta_reference_database: # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
+  - data/genomic_regions/exon_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+  - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
+cross_hybridization_alignment_method: blastn # options: blastn, bowtie
+hybridization_probability_alignment_method: blastn # options: blastn, bowtie
 hybridization_probability_threshold: 0.0001
 
 ### Parameters for the Oligo set selection
@@ -49,6 +53,7 @@ n_sets: 100
 ############################
 
 ### Parameters for the specificity filters
+# balstn
 cross_hybridization_blastn_search_parameters:
   perc_identity: 80
   strand: minus # this parameter is fixed
@@ -61,6 +66,15 @@ hybridization_probability_blastn_search_parameters:
   word_size: 10
 hybridization_probability_blastn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
+# bowtie
+cross_hybridization_bowtie_search_parameters:
+  -v: 3
+  --nofw: "" # this parameter is fixed
+cross_hybridization_bowtie_hit_parameters:
+hybridization_probability_bowtie_search_parameters:
+  -v: 3
+  --norc: ""
+hybridization_probability_bowtie_hit_parameters:
 
 ### Parameters for the Oligo set selection
 max_graph_size: 5000
