--- a/data/configs/genomic_region_generator_custom.yaml
+++ b/data/configs/genomic_region_generator_custom.yaml
@@ -3,7 +3,6 @@
 #######################
 
 ### General parameters
-n_jobs: 2 # number of cores used to run the pipeline
 dir_output: genomic_regions # name of the directory where the output files will be written
 
 ### Parameters for genome and gene annotation
@@ -20,7 +19,7 @@ source_params:
 # List of genomic that should be generated, set the genomic regions you want to generate to True
 genomic_regions:
   gene: false
-  intergenic: false
+  intergenic: true
   exon: true
   intron: false
   cds: false
