fix issue with intermediate results directories

--- a/data/configs/oligo_seq_designer.yaml
+++ b/data/configs/oligo_seq_designer.yaml
@@ -39,7 +39,7 @@ files_fasta_reference_database: # fasta file with sequences used as reference fo
   - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
 cross_hybridization_alignment_method: blastn # options: blastn, bowtie
 hybridization_probability_alignment_method: blastn # options: blastn, bowtie
-hybridization_probability_threshold: 0.0001
+hybridization_probability_threshold: 0.0001 #the lower the threshold the more stringent the filter
 
 ### Parameters for the Oligo set selection
 GC_content_opt: 55 # max and min values are defiend above
@@ -62,7 +62,7 @@ cross_hybridization_blastn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
 hybridization_probability_blastn_search_parameters:
   perc_identity: 80
-  strand: plus # this parameter is fixed
+  strand: minus # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 10
 hybridization_probability_blastn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
@@ -74,7 +74,7 @@ cross_hybridization_bowtie_search_parameters:
 cross_hybridization_bowtie_hit_parameters:
 hybridization_probability_bowtie_search_parameters:
   -v: 3
-  --norc: "" # this parameter is fixed
+  --nofw: "" # this parameter is fixed, if reference is whole genome, consider using "both"
 hybridization_probability_bowtie_hit_parameters:
 
 ### Parameters for the Oligo set selection
