--- a/data/configs/oligo_seq_designer.yaml
+++ b/data/configs/oligo_seq_designer.yaml
@@ -5,7 +5,6 @@
 ### General parameters
 n_jobs: 2 # number of cores used to run the pipeline
 dir_output: oligo_seq_output # name of the directory where the output files will be written
-file_format: tsv # fromat of the written files, can be "tsv" or "gtf"
 min_oligos_per_gene: 5 # minimum number of oligos that a gene must have before it gets deleted
 write_removed_genes: true # write in a file the removed genes
 write_intermediate_steps: true # writes the oligo sequences after each step of the pipeline
@@ -31,7 +30,7 @@ homopolymeric_base_n:
   A: 5
   T: 6
   C: 7
-homodimer_max_len_selfcomp: 10 #The maximum length of self-complementary sequence allowed to avoid homodimer formation.
+homodimer_max_len_selfcomp: 10 # The maximum length of self-complementary sequence allowed to avoid homodimer formation.
 
 ### Parameters for the specificity filters
 files_fasta_reference_database: # fasta file with sequences used as reference for the specificity filters. Hint: use the genomic_region_generator pipeline to create fasta files of genomic regions of interest
@@ -46,7 +45,7 @@ GC_content_opt: 55 # max and min values are defiend above
 Tm_opt: 60 # max and min values are defiend above
 oligoset_size: 5 # optimal size of oligo sets
 min_oligoset_size: 3 # minimum size of the oligosets (in case there exist no set of the optimal size)
-n_sets: 100
+n_sets: 100 # Maximum number of sets to report
 
 ############################
 ### DEVELOPER PARAMETERS ###
@@ -60,6 +59,7 @@ cross_hybridization_blastn_search_parameters:
   word_size: 10
 cross_hybridization_blastn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
+
 hybridization_probability_blastn_search_parameters:
   perc_identity: 80
   strand: minus # this parameter is fixed, if reference is whole genome, consider using "both"
@@ -71,11 +71,12 @@ hybridization_probability_blastn_hit_parameters:
 cross_hybridization_bowtie_search_parameters:
   -v: 3
   --nofw: "" # this parameter is fixed
-cross_hybridization_bowtie_hit_parameters:
+cross_hybridization_bowtie_hit_parameters: # No hit parameters available currently
+
 hybridization_probability_bowtie_search_parameters:
   -v: 3
   --nofw: "" # this parameter is fixed, if reference is whole genome, consider using "both"
-hybridization_probability_bowtie_hit_parameters:
+hybridization_probability_bowtie_hit_parameters: # No hit parameters available currently
 
 ### Parameters for the Oligo set selection
 max_graph_size: 5000
