update config comments

--- a/data/configs/genomic_region_generator_ncbi.yaml
+++ b/data/configs/genomic_region_generator_ncbi.yaml
@@ -9,8 +9,8 @@ dir_output: genomic_regions # name of the directory where the output files will 
 source: ncbi # required: indicate that own annotation should be used
 source_params:
   taxon: vertebrate_mammalian # required: taxon of the species, valid taxa are: archaea, bacteria, fungi, invertebrate, mitochondrion, plant, plasmid, plastid, protozoa, vertebrate_mammalian, vertebrate_other, viral
-  species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
-  annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
+  species: Homo_sapiens # required: species name in NCBI download format, e.g. 'Homo_sapiens' for human; see https://ftp.ncbi.nlm.nih.gov/genomes/refseq/ for available species name
+  annotation_release: 110 # required: release number of annotation e.g. '109' or '109.20211119'  or 'current' to use most recent annotation release. Check out release numbers for NCBI at ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/annotation_releases/
 
 ### Parameters for oligo sequences generation
 # List of genomic that should be generated, set the genomic regions you want to generate to True
