--- a/data/configs/genomic_region_generator_custom.yaml
+++ b/data/configs/genomic_region_generator_custom.yaml
@@ -8,8 +8,8 @@ dir_output: genomic_regions # name of the directory where the output files will 
 ### Parameters for genome and gene annotation
 source: custom # required: indicate that own annotation should be used
 source_params:
-  file_annotation: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf #output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.gtf # required: GTF file with gene annotation
-  file_sequence: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna #output_seqfish/annotation/GCF_000001405.40_GRCh38.p14_genomic.fna # required: FASTA file with genome sequence
+  file_annotation: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf # required: GTF file with gene annotation
+  file_sequence: data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna # required: FASTA file with genome sequence
   files_source: NCBI # optional: original source of the genomic files
   species: Homo_sapiens # optional: species of provided annotation, leave empty if unknown
   annotation_release: 110 # optional: release number of provided annotation, leave empty if unknown
