--- a/data/configs/genomic_region_generator_ensemble.yaml
+++ b/data/configs/genomic_region_generator_ensemble.yaml
@@ -3,7 +3,7 @@
 #######################
 
 ### General parameters
-dir_output: genomic_regions # name of the directory where the output files will be written
+dir_output: output_genomic_region_generator_ensembl # name of the directory where the output files will be written
 
 ### Parameters for genome and gene annotation
 source: ensembl # required: indicate that ensembl annotation should be used
