--- a/data/configs/oligo_seq_probe_designer.yaml
+++ b/data/configs/oligo_seq_probe_designer.yaml
@@ -54,14 +54,14 @@ n_sets: 100 # Maximum number of sets to report
 # balstn
 cross_hybridization_blastn_search_parameters:
   perc_identity: 80
-  strand: minus # this parameter is fixed
+  strand: "minus" # this parameter is fixed
   word_size: 10
 cross_hybridization_blastn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
 
 hybridization_probability_blastn_search_parameters:
   perc_identity: 80
-  strand: minus # this parameter is fixed, if reference is whole genome, consider using "both"
+  strand: "minus" # this parameter is fixed, if reference is whole genome, consider using "both"
   word_size: 10
 hybridization_probability_blastn_hit_parameters:
   coverage: 50 # could be turned into min_alignment_length
