--- a/data/configs/genomic_region_generator_ensemble.yaml
+++ b/data/configs/genomic_region_generator_ensemble.yaml
@@ -1,5 +1,5 @@
 #######################
-### USER PARAMETERS ###
+### BASIC PARAMETERS ###
 #######################
 
 ### General parameters
@@ -20,6 +20,6 @@ genomic_regions:
   cds: false
   exon_exon_junction: true
 
-# If exon_exon_junction is ste to true, specify the block size, i.e. +/- "block_size" bp around the junction 
-# Hint: it does not make sense to set the block size larger than the maximum oligo length 
+# If exon_exon_junction is ste to true, specify the block size, i.e. +/- "block_size" bp around the junction
+# Hint: it does not make sense to set the block size larger than the maximum oligo length
 exon_exon_junction_block_size: 50
