--- a/data/configs/oligo_seq_probe_designer.yaml
+++ b/data/configs/oligo_seq_probe_designer.yaml
@@ -16,6 +16,7 @@ files_fasta_oligo_database: # fasta file with sequences form which the oligos sh
   - data/genomic_regions/exon_exon_junction_annotation_source-NCBI_species-Homo_sapiens_annotation_release-110_genome_assemly-GRCh38.fna
 oligo_length_min: 26 #min length of oligos
 oligo_length_max: 30 #max length of oligos
+split_region: 4 #Minimum number of bases covering the exon junction, i.e. the oligo should contain at least x bases upstream/downstream of the junction.
 
 ### Parameters for the property filers
 ### -----------------------------------------------
@@ -31,7 +32,7 @@ homopolymeric_base_n: # minimum number of nucleotides to consider it a homopolym
   T: 6
   C: 6
   G: 6
-max_len_selfcomp: 10 # The maximum length of self-complementary sequence allowed to avoid homodimer formation.
+max_len_selfcomplement: 10 # The maximum length of self-complementary sequence allowed to avoid homodimer formation.
 
 ### Parameters for the specificity filters
 ### -----------------------------------------------
